# -haskellExercises

./: .project  ConsultaBD.hs  DefinicionPorComprehension.hs  DefinicionesRecursionYComprension.hs  EjerciciosClase.cabal  README.md
.dist-buildwrapper/src/: DefinicionesPorComprension.hs  Main.hs
src/: DefinicionPorComprehension.hs  DefinicionesElementalesDeFunciones.hs  DefinicionesRecursivas.hs  FuncionesSobreCadenas.hs
