name:           EjerciciosClase
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         bigdata95

executable EjerciciosClase
  hs-source-dirs:  src
  main-is:         DefinicionesElementalesDeFunciones.hs
  build-depends:   base >= 4
  ghc-options:     -Wall
  other-modules:   
                   Main,
                   DefinicionPorComprehension,
                   ConsultaBD,
                   DefinicionesRecursivas,
                   DefinicionesRecursionYComprension

